--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,5 @@
 name: Elastic Machine Config Generator
+author: Brett Logan
 description: Generate a config file for the Elastic Machines controller
 inputs:
   template_path:
