--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/lindluni/em-config#readme",
   "dependencies": {
     "@actions/core": "^1.9.1",
-    "yaml": "^2.1.1"
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0"
